kubernetes/template.compiled.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    stack: gentry
    component: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    stack: gentry
    component: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      stack: gentry
      component: postgres
  template:
    metadata:
      labels:
        stack: gentry
        component: postgres
    spec:
      enableServiceLinks: false
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-data
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - djangoapp
          initialDelaySeconds: 15
          periodSeconds: 30
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - djangoapp
          initialDelaySeconds: 30
          periodSeconds: 30
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: uwsgi
  labels:
    stack: gentry
    component: djangoapp
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    stack: gentry
    component: uwsgi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uwsgi
spec:
  selector:
    matchLabels:
      stack: gentry
      component: uwsgi
  template:
    metadata:
      labels:
        stack: gentry
        component: uwsgi
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: uwsgi
        image: gentry
        ports:
        - containerPort: 8000
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        startupProbe:
          httpGet:
            path: /healthz
            port: 8000
            httpHeaders:
            - name: Host
              value: gentry.localhost
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
            httpHeaders:
            - name: Host
              value: gentry.localhost
          periodSeconds: 30
        volumeMounts:
        - mountPath: /tmp
          name: temp
      volumes:
      - name: temp
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gentry
spec:
  rules:
  - host: gentry.localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: uwsgi
            port:
              number: 8000
